kubernetes/service_entry/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-services
spec:
  hosts:
  - firestore.googleapis.com
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: http
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
